# tabpfn-regressor-macos-repro

./: ISSUE_BODY.md  README.md  pyproject.toml
artifacts/: crash_summary.txt  data_summary.json
data/: men_fold1_train_aug.csv  men_fold1_valid.csv
scripts/: print_env.py  repro_real_fold.py
